# qa_guru_6_19

./: .gitignore  README.md  pyproject.toml
