[tool.poetry]
name = "qa-guru-6-19"
version = "0.1.0"
description = "homework 19 lesson"
authors = ["Alexandr Lysenko <ovie48@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selene = "2.0.0rc4"
pytest = "7.4.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
